# h1fitter

./: Makefile.am  README  REFERENCES  configure.ac  ewparam.txt  steering.txt
ACOT/src/: ingo.f  sf_acot_wrap.f
datafiles/lhc/atlas/Jets2010/: Makefile.am
datafiles/lhc/cms/: CMS_Z_boson_Rapidity___CMS_Z_boson_Rapidity.corr  CMS_eAsymmetry_SPM_12_001___CMS_eAsymmetry_SPM_12_001.corr  Makefile.am
datafiles/tevatron/: D0_W_asymmetry.corr  Makefile.am
doc/tex/: Chisquare.tex  ErrorTreatment.tex  Introduction.tex  Namelist.tex  PDFparametrisation.tex  ProgramManual.tex  Theory.tex  UsersExample.tex  writeup.bib  writeup.tex
doc/tex/manual/: ProgramManual.tex  Reweighing.tex
include/: CommonGrid.h  datasets.inc  dipole.inc  herafitter_cpp.h  steering.inc
input_steering/: minuit.in.txt.BiLog.16p  minuit.in.txt.BiLog.18p  steerig.txt.ALLdata  steerig.txt.DIFFRACTION  steerig.txt.DIPOLE
src/: CommonGrid.cc  GetChisquare.f  Makefile.am  TheorEval.cc  difftop_fastnlo.f  dis_sigma.f  evolution.f  fcn.f  init_theory.f  lhapdferrors.cc  main.f  pdf_param.f  prep_corr.f  read_data.f  read_steer.f  store_output.f  theory_dispatcher.f
theoryfiles/: IJET_HIGHQ2_Q2ET2-20081126-test_new_v2.0.tab  IJET_LOWQ2_Q2ET2_over2-20090227_FIXEDMUF_v2.0.tab  Makefile.am  fnh4002.tab  fnh4301.tab  fnh4401.tab  fnh5201.tab  fnh5401.tab  fnh5401_I818707.tab
theoryfiles/atlas/DY/: dy.hm.nnlo.txt  ext_fidu.root  kf.nominal.scheme.txt
theoryfiles/atlas/Jets2010_7TeV/: atlas-incljets-R04-eta6.root  atlas-incljets-R06-eta6.root
theoryfiles/updf/: Makefile.am
tools/: check.sh
(+67 files in other folders)
